# Scofield

./: CMakeLists.txt  README.md  burrows_wheeler_transform.cpp  burrows_wheeler_transform.h  constants.h  encrypt_decrypt.cpp  encrypt_decrypt.h  header.cpp  header.h  main.cpp  strings_utility.cpp  strings_utility.h
